--- a/package.json
+++ b/package.json
@@ -32,18 +32,22 @@
   },
   "dependencies": {
     "@types/joi": "^17.2.3",
+    "@types/redis": "^4.0.11",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "ioredis": "^5.3.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^7.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.6.7"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
