--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
@@ -53,7 +55,8 @@
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "redis": "^4.6.7",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "yamljs": "^0.3.0"
   },
   "_moduleAliases": {
     "@/resources": "dist/resources",
